--- a/src/styles/modules/_m-popup.sass
+++ b/src/styles/modules/_m-popup.sass
@@ -31,7 +31,7 @@
       z-index: 100
 
   +e(content)
-    +font-size(14)
+    font-size: $font_size_xs
     +rem-fallback('line-height', 22px)
     +rem-fallback('padding', $space_s)
     font-weight: $font_weight_light
