--- a/src/styles/modules/_m-pet-card.sass
+++ b/src/styles/modules/_m-pet-card.sass
@@ -1,7 +1,7 @@
 +b(pet-card)
   background: $color_gray_lighter
   border-radius: $radius_l
-  box-shadow: 0 0 4px #b3b3b3
+  box-shadow: 0 0 4px $color_gray_darker
   padding: $space_xxs
   display: grid
   grid-template-columns: 124px auto
