--- a/src/styles/modules/_m-radio-buttons.sass
+++ b/src/styles/modules/_m-radio-buttons.sass
@@ -15,10 +15,10 @@
     visibility: hidden
 
     &:hover ~ .#{$prefix_component}radio__outside
-      border: 2px solid $color_primary
+      +rem-fallback('border', 2px solid $color_primary)
 
       &.#{$prefix_component}radio__outside--color-blue
-        border: 2px solid $color_white
+        +rem-fallback('border', 2px solid $color_white)
 
         &::before
           background: $color_white
@@ -31,7 +31,7 @@
         background: transparent
 
       &:hover
-        border: 2px solid $color_primary
+        +rem-fallback('border', 2px solid $color_primary)
 
       &.#{$prefix_component}radio__outside--color-blue,
       &.#{$prefix_component}radio__outside--color-grey,
@@ -40,42 +40,42 @@
           background: transparent
 
     &:disabled+.#{$prefix_component}radio__label--color-blue
-      color: $ablue_light
+      color: $color_primary_light
 
     &:disabled+.#{$prefix_component}radio__label--color-grey,
     &:disabled+.#{$prefix_component}radio__label--color-ltgrey
       color: $color_gray_darker
 
     &:checked ~ .#{$prefix_component}radio__outside
-      border: 2px solid $color_primary
+      +rem-fallback('border', 2px solid $color_primary)
 
       &::before
         +rem-fallback('height', 13px)
         +rem-fallback('width', 13px)
-        top: 2px
-        left: 2px
+        +rem-fallback('top', 2px)
+        +rem-fallback('left', 2px)
     &:checked ~ .#{$prefix_component}radio__outside--color-blue
       &.#{$prefix_component}radio__outside
-        border: 2px solid $color_white
+        +rem-fallback('border', 2px solid $color_white)
 
         &::before
           +rem-fallback('height', 13px)
           +rem-fallback('width', 13px)
-          top: 2px
-          left: 2px
+          +rem-fallback('top', 2px)
+          +rem-fallback('left', 2px)
 
     &:disabled ~ .#{$prefix_component}radio__outside--color-blue
       &.#{$prefix_component}radio__outside
-        border: 2px solid $ablue_light
+        +rem-fallback('border', 2px solid $color_primary_light)
 
     &:disabled ~ .#{$prefix_component}radio__outside--color-grey,
     &:disabled ~ .#{$prefix_component}radio__outside--color-ltgrey
       &.#{$prefix_component}radio__outside
-        border: 2px solid $color_gray_darker
+        +rem-fallback('border', 2px solid $color_gray_darker)
 
     &:disabled ~ .#{$prefix_component}radio__outside--color-white
       &.#{$prefix_component}radio__outside
-        border: 2px solid $color_gray_dark
+        +rem-fallback('border', 2px solid $color_gray_dark)
 
     &:checked ~ .#{$prefix_component}radio__outside
       &::before
@@ -105,10 +105,10 @@
   +element('outside')
     display: block
     position: absolute
-    border: 2px solid $color_gray_darker
+    +rem-fallback('border', 2px solid $color_gray_darker)
     border-radius: 100%
     +rem-fallback('padding', 8.5px)
-    top: 1px
+    +rem-fallback('top', 1px)
     left: 0
     z-index: 5
     &::before
@@ -124,4 +124,4 @@
 
     &--color-blue
       &.#{$prefix_component}radio__outside
-        border: 2px solid $color_white
+        +rem-fallback('border', 2px solid $color_white)
