--- a/src/styles/modules/_m-popup.sass
+++ b/src/styles/modules/_m-popup.sass
@@ -22,7 +22,7 @@
       box-sizing: border-box
       content: ''
       height: 0
-      margin-left: -11px
+      +rem-fallback('margin-left', -11px)
       left: 50%
       position: absolute
       transform-origin: 0 0
