--- a/src/styles/modules/_m-textlink.sass
+++ b/src/styles/modules/_m-textlink.sass
@@ -16,7 +16,7 @@
 
     &:active
       text-decoration: underline
-      color: color(ablue, dark)
+      color: $color_primary_dark
 
   +m(color-gray-light)
     color: $color_gray_light
@@ -28,4 +28,4 @@
 
       &:active
           text-decoration: underline
-          color: color(ablue, dark)
+          color: $color_primary_dark
