--- a/src/styles/modules/_m-pet-card.sass
+++ b/src/styles/modules/_m-pet-card.sass
@@ -52,7 +52,7 @@
       margin-left: 0
 
     h4
-      margin-bottom: 10px
+      +rem-fallback('margin-bottom', 10px)
       word-break: break-all
       white-space: nowrap
       overflow: hidden
