--- a/src/styles/modules/_m-pagination.sass
+++ b/src/styles/modules/_m-pagination.sass
@@ -34,7 +34,7 @@
             padding-bottom: 0
 
           a
-            +rem-fallback('font-size', 16px)
+            +rem-fallback('font-size', $font_size_s)
             font-weight: $font_weight_normal
             +rem-fallback('line-height', $line_height_s)
             display: flex
