--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -6,9 +6,8 @@
     padding: 0
     font-family: $font
     font-weight: $font_weight_normal
-    font-size: $base-font-size
-    color: $color_black
-    line-height: 1.5
+    // font-size: $base-font-size
+    // line-height: 1.5
     text-decoration: none
 
 // This will override some of the above styles, and is only applied to components
