HB-5099: dropdown elements rebranding

--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -122,4 +122,4 @@
       padding: 10px 15px
 
     input:not(:active)
-      border: 1px solid $color-gray-light
+      border: 1px solid $color-gray-darker
