--- a/src/styles/modules/_m-fields.sass
+++ b/src/styles/modules/_m-fields.sass
@@ -113,7 +113,7 @@
 
     +m(right)
       +rem-fallback('font-size', $font-size-xs)
-      +rem-fallback('line-height', $line-height-s-v2)
+      +rem-fallback('line-height', $line_height_xs)
       position: initial
       float: left
       font-weight: $font-weight-bold
