--- a/src/styles/modules/_m-radio-buttons.sass
+++ b/src/styles/modules/_m-radio-buttons.sass
@@ -81,6 +81,10 @@
       &::before
         background: $color_primary
 
+      &.is-inverted
+        &::before
+          background: $color_white
+
     &:checked ~ .#{$prefix_component}radio__outside--color-blue
       &.#{$prefix_component}radio__outside
         &::before
@@ -98,6 +102,8 @@
     font-weight: $font_weight_light
     width: 100%
 
+    &.is-inverted
+      color: $color_white
 
     +modifier('blue')
       color: $color_white
@@ -121,6 +127,18 @@
       top: 0
       left: 0
       margin: auto
+
+      &.is-inverted
+        fill: red !important
+
+    &.is-inverted
+      +rem-fallback('border', 2px solid $color_white !important)
+
+    &:hover
+      cursor: pointer
+
+      &.is-inverted
+        background: $color_white
 
     &--color-blue
       &.#{$prefix_component}radio__outside
