--- a/src/styles/modules/_m-button.sass
+++ b/src/styles/modules/_m-button.sass
@@ -145,3 +145,5 @@
     display: inline-block
     vertical-align: text-bottom
     +rem-fallback('margin-right', $space_xxxxs)
+    position: relative
+    +rem-fallback('top', -$space_xs)
