HB-5099: Rebranding for TextLink, Tooltip, ValidatedForm, ValuesList

--- a/src/styles/modules/_m-fields.sass
+++ b/src/styles/modules/_m-fields.sass
@@ -1,7 +1,9 @@
 +b(text-field)
+
   +e(container)
     position: relative
     width: 100%
+    margin-bottom: $space_xs
 
   +e(input)
     +rem-fallback('border', 1px solid $color_gray_darker)
