--- a/src/styles/modules/_m-vdivider.sass
+++ b/src/styles/modules/_m-vdivider.sass
@@ -1,6 +1,6 @@
 +b(vdivider)
   +rem-fallback('border-top', 1px solid $color_gray_darker)
-  +rem-fallback('margin-bottom', 40px)
+  +rem-fallback('margin-bottom', $space_xl)
 
   +m(type-dashed)
     +rem-fallback('border-top', 1px dashed $color_gray_darker)
