HB-5099: tooltip improvements

--- a/src/styles/modules/_m-fields.sass
+++ b/src/styles/modules/_m-fields.sass
@@ -159,6 +159,10 @@
       left: auto
       position: absolute
       vertical-align: middle
+      align-items: center
 
       > *
         +inline-space($space_xxs)
+
+      .#{$prefix_component}text-field__label
+        margin-top: -4px
