HB-5099: Heading sytles and new icons

--- a/src/styles/modules/_m-checkbox.sass
+++ b/src/styles/modules/_m-checkbox.sass
@@ -58,6 +58,7 @@
 
     +m(size-small)
       +rem-fallback('line-height', $line_height_xs)
+      +rem-fallback('margin-left', $space_xxs)
       margin-top: 0
 
     &.is-inverted
