--- a/src/styles/modules/_m-headings.sass
+++ b/src/styles/modules/_m-headings.sass
@@ -20,12 +20,11 @@
       font-family: $font_special
 
     &--light
-      color: $color_gray_darker
       font-weight: $font_weight_light
       letter-spacing: $letter_spacing_default
 
-    &--bold
-      font-weight: $font_weight_bold
+    &--large
+      font-size: $font_size_xxxl
 
   +element('h2')
     +rem-fallback('font-size', $font_size_l)
@@ -48,7 +47,6 @@
       font-family: $font_special
 
     &--light
-      color: $color_gray_darker
       font-weight: $font_weight_light
       letter-spacing: $letter_spacing_default
 
@@ -82,7 +80,6 @@
       font-family: $font_special
 
     &--light
-      color: $color_gray_darker
       font-weight: $font_weight_light
       letter-spacing: $letter_spacing_default
 
@@ -120,7 +117,6 @@
       font-family: $font_special
 
     &--light
-      color: $color_gray_darker
       font-weight: $font_weight_light
       letter-spacing: $letter_spacing_default
 
@@ -154,7 +150,6 @@
       font-family: $font_special
 
     &--light
-      color: $color_gray_darker
       font-weight: $font_weight_light
       letter-spacing: $letter_spacing_default
 
@@ -185,7 +180,6 @@
       font-family: $font_special
 
     &--light
-      color: $color_gray_darker
       font-weight: $font_weight_light
       letter-spacing: $letter_spacing_default
 
