--- a/src/styles/modules/_m-modal.sass
+++ b/src/styles/modules/_m-modal.sass
@@ -1,19 +1,23 @@
 +b('modal-popup')
-  align-items: center
-  background: rgba(255, 255, 255, .9)
-  bottom: 0
-  display: flex
-  justify-content: center
-  left: 0
-  opacity: 0
-  overflow: hidden
+  background: $color_white
   position: fixed
-  right: 0
   top: 0
-  transition: all .5s cubic-bezier(0.23, 1, 0.32, 1)
-  visibility: hidden
-  z-index: 1000
+  right: 0
+  bottom: 0
+  left: 0
+  overflow: scroll
   -webkit-overflow-scrolling: touch
+  z-index: top
+
+  +breakpoint('tablet-wide')
+    align-items: center
+    background: rgba(36,36,36,0.4)
+    display: flex
+    justify-content: center
+    opacity: 0
+    transition: all .5s cubic-bezier(0.23, 1, 0.32, 1)
+    visibility: hidden
+    z-index: 1000
 
   +is('active')
     opacity: 10
@@ -24,61 +28,66 @@
     align-items: flex-start
 
   +e('dialog')
-    max-width: 90%
-    padding: $space_xxl 0
-    width: 90%
-
-  +e('content')
-    @include border-radius($radius_l)
-    background-clip: padding-box
-    background: $color_white
-    border: 6px solid $color_primary
-    position: relative
+    max-width: 100%
+    padding: 0
     width: 100%
 
-    header
-      margin-bottom: 0
-      height: $space_xl
-      padding: 7px 0 0 $space_s
+    +breakpoint('tablet-wide')
+      padding: $space_xxl 0
+      width: 90%
+      +rem-fallback('max-width', 1170px)
 
   +e('close')
+    float: right
+    right: $space_l
+    top: 0
     cursor: pointer
-    z-index: 1100
-    position: absolute
-    top: $space_xxs
-    right: $space_xxs
-    padding: $space_xxs
-    transition: all .5s cubic-bezier(.23,1,.32,1)
+
+    +breakpoint(tablet-wide)
+      cursor: pointer
+      transition: all .5s cubic-bezier(.23,1,.32,1)
 
   +e('close-svg')
     pointer-events: none
 
-@media screen and (max-+rem-fallback('width', 977px))
-  +b('modal-popup')
-    background: $color_white
+  +e('content')
+    border-radius: 0
+    border: none
+    overscroll-behavior: none
 
-    +e('dialog')
-      max-width: 100% !important
-      padding: 0
+    +breakpoint('tablet-wide')
+      @include border-radius($radius_l)
+      background-clip: padding-box
+      background: $color_white
+      border: 6px solid $color_primary
+      position: relative
       width: 100%
 
-    +e('close')
-      padding: $space_xxxs
-      right: $space_l
-      top: 0
+    header
+      background: $color_white
+      padding: $space_s $space_s $space_xxs $space_m
 
-    +e('content')
-      border-radius: 0
-      border: none
-      overscroll-behavior: none
+      +breakpoint(tablet-wide)
+        border-bottom: none
+        padding: $space_s $space_s $space_s $space_m
 
-      header
-        background: $color_white
-        border-bottom: 1px solid $color_gray_light
-        height: $space_xl
+        &.l
+          padding: $space_s $space_s 0 $space_m
 
-      main
-        overflow: scroll
-        height: calc(100vh - 40px)
+    main
+      padding: 0 $space_m $space_l
+      overflow: scroll
+
+      +breakpoint('tablet-wide')
+        // height: calc(100vh - 40px)
         box-sizing: border-box
-        padding-top: $space_s
+        padding: 0 16.67% $space_xl
+
+        &.l
+          padding: 0 8.33% $space_xl
+
+    footer
+      text-align: center
+
+      +breakpoint('tablet-wide')
+        text-align: right
