--- a/src/styles/modules/_m-radio-buttons.sass
+++ b/src/styles/modules/_m-radio-buttons.sass
@@ -94,7 +94,7 @@
     +rem-fallback('font-size', $font_size_m)
     +rem-fallback('border-radius', $radius_l)
     +rem-fallback('line-height', $line_height_m_v2)
-    +rem-fallback('padding-left', $space_l)
+    +rem-fallback('padding-left', $space_xl)
     +rem-fallback('top', -2px)
     position: relative
     color: $color_black
