--- a/src/styles/modules/_m-textlink.sass
+++ b/src/styles/modules/_m-textlink.sass
@@ -6,25 +6,25 @@
   +m(underline)
     text-decoration: underline
 
-  +m(color-blue)
+  +m(color-primary)
     color: $color_primary
 
-    +breakpoint(desktop)
+    +breakpoint(tablet-wide)
       &:hover
         text-decoration: underline
-        color: $color_primary
+        color: $color_primary_dark
 
     &:active
       text-decoration: underline
       color: $color_primary_dark
 
-  +m(color-gray-light)
-    color: $color_gray_light
+  +m(color-black)
+    color: $color_black
 
-    +breakpoint(desktop)
+    +breakpoint(tablet-wide)
       &:hover
         text-decoration: underline
-        color: $color_primary
+        color: $color_primary_dark
 
       &:active
           text-decoration: underline
