--- a/src/styles/modules/_m-popup.sass
+++ b/src/styles/modules/_m-popup.sass
@@ -4,31 +4,20 @@
   pointer-events: auto
   z-index: 1
 
+  +e(bubble-container)
+    +rem-fallback('bottom', $space_xs)
+    position: absolute
+    box-shadow: $shadow_callout
+    border-radius: $radius_l
+
   +e(bubble)
     margin-left: auto
     margin-right: 0
     right: 0
-    background: $color_white
-    border-radius: $radius_l
-    box-shadow: $shadow_callout
     position: relative
     display: inline-block
-
-    &::after
-      +rem-fallback('border', 8px solid $color_black)
-      +rem-fallback('left', $space_xxxxl)
-      border-color: transparent transparent $color_white $color_white
-      box-shadow: $shadow_callout
-      box-sizing: border-box
-      content: ''
-      height: 0
-      +rem-fallback('margin-left', -11px)
-      left: 50%
-      position: absolute
-      transform-origin: 0 0
-      transform: rotate(315deg)
-      width: 0
-      z-index: 100
+    z-index: 100
+    border-radius: $radius_l
 
   +e(content)
     font-size: $font_size_xs
@@ -36,11 +25,22 @@
     +rem-fallback('padding', $space_s)
     font-weight: $font_weight_light
     position: relative
+    background: $color_white
+    border-radius: $radius_l
+    z-index: 1
 
-  +e(bubble-container)
-    // Set the width on bubble-container acts like max-width normally would
-    // (it's different because the bubble is positioned `absolute`)
-    // +rem-fallback('width', $width_tooltip)
-    // +rem-fallback('left', -($width_tooltip / 2))
-    +rem-fallback('bottom', $space_xl)
+  .caret
+    +rem-fallback('border', 8px solid $color_black)
+    +rem-fallback('left', $space_xxxxl)
+    border-color: transparent transparent $color_white $color_white
+    box-shadow: $shadow_callout
+    box-sizing: border-box
+    content: ''
+    height: 0
+    +rem-fallback('margin-left', -11px)
+    left: 50%
     position: absolute
+    transform-origin: 0 0
+    transform: rotate(315deg)
+    width: 0
+    z-index: -1
