--- a/src/styles/modules/_m-tooltip.sass
+++ b/src/styles/modules/_m-tooltip.sass
@@ -4,40 +4,60 @@
   pointer-events: auto
   z-index: 1
 
-  +e(bubble)
+  .icon-container
+    display: inline-block
+    position: relative
+
+    .hover-area
+      position: absolute
+      top: 0
+      right: 0
+      bottom: 0
+      left: 0
+
+  .bubble
     position: relative
     background: $color_white
     border-radius: $radius_l
     z-index: 200
 
-  +e(content)
+  .content
     font-size: $font_size_xs
     +rem-fallback('line-height', 22px)
     +rem-fallback('padding', $space_s)
     font-weight: $font_weight_light
     position: relative
 
-  +e(bubble-container)
+  .bubble-container
     // Set the width on bubble-container acts like max-width normally would
     // (it's different because the bubble is positioned `absolute`)
     +rem-fallback('width', $width_tooltip)
-    +rem-fallback('left', -($width_tooltip / 2))
     +rem-fallback('bottom', $space_xl)
+    +rem-fallback('left', -($width_tooltip / 2))
     box-shadow: $shadow_callout
     position: absolute
-    +rem-fallback('margin-left', -70px)
     +rem-fallback('margin-bottom', 3px)
     border-radius: $radius_l
 
-    &::after
+    &.from-left
+      +rem-fallback('margin-left', 88px)
+
+      .caret
+        +rem-fallback('left', $space_s)
+
+    &.from-right
+      +rem-fallback('margin-left', -70px)
+
+      .caret
+        +rem-fallback('right', $space_m)
+
+    .caret
       +rem-fallback('border', 8px solid $color_black)
-      +rem-fallback('right', $space_m)
       border-color: transparent transparent $color_white $color_white
       box-shadow: $shadow_callout
       box-sizing: border-box
       content: ''
       height: 0
-      margin-left: 1.8em
       position: absolute
       transform-origin: 0 0
       transform: rotate(315deg)
