HB-5099: more tooltip improvements

--- a/src/styles/modules/_m-tooltip.sass
+++ b/src/styles/modules/_m-tooltip.sass
@@ -2,7 +2,8 @@
   position: relative
   overflow: visible
   pointer-events: auto
-  z-index: 1
+  z-index: 100
+  display: inline-block
 
   .icon-container
     display: inline-block
