HB-5971: moved up error message in fields

--- a/src/styles/modules/_m-fields.sass
+++ b/src/styles/modules/_m-fields.sass
@@ -90,7 +90,7 @@
     +rem-fallback(font-size, $font-size-xs)
     +rem-fallback(line-height, $line-height-h5v2)
     +rem-fallback(right, $space-xs)
-    +rem-fallback(top, 3px)
+    top: 0
     color: color(aorange)
     pointer-events: none
     position: absolute
