HB-5303: adding small print text to offers form

--- a/src/styles/modules/_m-offers-form.sass
+++ b/src/styles/modules/_m-offers-form.sass
@@ -26,6 +26,7 @@
 
   +e('all-offers')
     +rem-fallback(padding, $space-s)
+    +rem-fallback('margin-bottom', $space-s)
     font-weight: 200
     background: $color-forty-per-lighter-grey
 
