HB-5317: Tidy up validation

--- a/src/styles/modules/_m-payment-form.scss
+++ b/src/styles/modules/_m-payment-form.scss
@@ -104,6 +104,18 @@
         'paymenterror paymenterror';
       grid-column-gap: 10px;
       grid-row-gap: 20px;
+
+      @include element('card-number') {
+        border-color: color(aorange);
+      }
+
+      @include element('card-expiry') {
+        border-color: color(aorange);
+      }
+    
+      @include element('card-cvc') {
+        border-color: color(aorange);
+      }
     }
 
     @include modifier('multiple-errors') {
@@ -147,6 +159,18 @@
           'cardexpiry cardcvc'
           'paymenterror paymenterror';
         grid-column-gap: 20px;
+
+        @include element('card-number') {
+          border-color: color(aorange);
+        }
+
+        @include element('card-expiry') {
+          border-color: color(aorange);
+        }
+      
+        @include element('card-cvc') {
+          border-color: color(aorange);
+        }
       }
 
       @include modifier('multiple-errors') {
@@ -197,6 +221,8 @@
 
   @include element('error-text') {
     grid-area: paymenterror;
+    @include rem-fallback('margin-bottom', 20px);
+    @include rem-fallback('margin-top', -20px);
   }
 
   @include element('text-orange') {
