HB-5952: updates facebook colors

--- a/src/styles/legacy/_base/_config.scss
+++ b/src/styles/legacy/_base/_config.scss
@@ -85,7 +85,7 @@ $border-radius: em(6);
 
 //https://www.competethemes.com/blog/social-media-colors/
 $properties: (
-  facebook: #3b5998,
+  facebook: #1877f2,
   googleplus: #dd4b39,
   instagram: #517fa4,
   pinterest: #bd081c,
