HB-5952: updates facebook logo

--- a/src/styles/modules/_m-button.scss
+++ b/src/styles/modules/_m-button.scss
@@ -30,6 +30,12 @@
       .svg-path {
         fill: #fff;
       }
+      #fb-hover {
+        fill: #fff;
+      }
+      #fb-hover-inner {
+        fill: #1877f2;
+      }
     }
   }
 
