GD-41: Remove margin above wildest banner in offers form and update package version

--- a/src/styles/modules/_m-offers-form.sass
+++ b/src/styles/modules/_m-offers-form.sass
@@ -40,7 +40,7 @@
 .wildest-banner
     display: flex
     @include rem-fallback('max-width', 445px)
-    @include rem-fallback('margin-top', 30px)
+    margin-top: 0 !important;
 
     &__logo
         @include rem-fallback('height', 90px)
